# battletech-techsheet

./: .editorconfig  .gitignore  CMakeLists.txt  CPLT-C1.mtf  LICENSE  README.md  build.sh  compile_commands.json  emscripten_deploy.bat  how_to_emscripten.md
.github/actions/create_sample_mtf_list/: action.yml
.github/workflows/: deploy_gh_pages.yml  deploy_pages-via-github.yml
include/mtfparser/: AmmoMetaInfo.h  MtfParser.h  WeaponMetaInfo.h  name_conversions.h  parse_exceptions.h  weapon_lookup.h
include/techsheet/: Ammo.h  Component.h  CritRange.h  DamageAftermath.h  IncomingDamage.h  Mech.h  NumberIsh.h  RangeLimits.h  TurnResults.h  Weapon.h  WeaponComponent.h  compile_defs.h  component_filters.h  component_static.h  critical_hits.h  fixed_str.h  id_defs.h  is_safe_numeric_cast.h  scalar_defs.h  std_cout_printing.h  stl_polyfill.h  string_view_util.h  structure.h  structure_static.h  template_defs.h  test.cpp  types.h
include/techsheet/iterators/: array_subset.h  filtered_collection.h  filtered_iterator.h
projects/msvs/: Techsheet.sln  Techsheet.vcxproj  Techsheet.vcxproj.filters  TechsheetCLI.vcxproj  TechsheetCLI.vcxproj.filters  TechsheetMtfParser.vcxproj  TechsheetMtfParser.vcxproj.filters  TechsheetTest.vcxproj  TechsheetTest.vcxproj.filters  boostdependency_no_linker.props  msvc_defines.props  mtfparserdependency.props  mtfparserdependency_no_linker.props  techsheetbuild.props  techsheetdependency.props
src/CLI/: CLIMain.cpp  WebMain.cpp  emscripten_polyfill.h  is_windows.h  string_descriptions.cpp  string_descriptions.h  string_tools.h
src/CLI/web/: DamageResult_wrapper.h  component_util.h  number_ish_wrapper.h  optional_wrapper.h
src/MtfParser/: MtfParser.cpp  ammo_db.h  weapon_db.h  weapon_lookup.cpp  weapon_name_db.h
src/lib/: techsheet_lib.cpp
static_data/: ammo.json  weapons.json
test/: test_filtered_collection.cpp  test_mech.cpp  test_structure_manager.cpp
test/unit/: number_ish.cpp  structure_manager.cpp  suite_registry.h  test_fixed_str.cpp  test_main.cpp  test_number_ish.cpp  test_structure_manager.cpp
test_data/: Cyclops_CP-10-Z.mtf  Firestarter-FS9-A.mtf
tools/: generate_weapons.py  weapon_name_db.h
web/: python_serve.bat
web/root/: index.html  sections.html  styles.css  techsheet_cli.js  techsheet_cli.wasm  test.html
web/root/css/: crit.css  heat.css  sections.css  weapons.css
web/root/js/: ComponentRef.js  MechRenderer.js  TechsheetAPI.js  WeaponRef.js  cppWrapUtil.js  techsheetMain.js  typedefs.js  wasmWrap.js
web/root/js/DOMhelpers.js/: cellFromElm.js  cellFromText.js  setTextContent.js  waitForObjectsLoaded.js
web/root/js/rendering/: MechDots.js
